--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>
 <a name="useful-js-and-css-files" class="anchor" href="#useful-js-and-css-files"><span class="octicon octicon-link"></span></a>Useful JS and CSS files</h1>
 
-<p>Tableau API js: <a href="https://github.com/mahabubbasha/test/tree/master/js"> Click here </a></p>
+<p>Tableau API js: <a href="https://github.com/mahabubbasha/test"> Click here </a></p>
       </section>
     </div>
 
